# CMakeList.txt : CMake project for Ships, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Ships "Ships.cpp" "Ships.h" "Printing.cpp" "BattleshipLogic.cpp")

# TODO: Add tests and install targets if needed.
